--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,68 @@ img {
   display: block;
   max-width: 100%;
 }
+
+
+.timer{
+  display: flex;
+  justify-content: center;
+
+  margin-top: 10px;
+}
+
+.field{
+  margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.value{
+  font-size: 50px;
+}
+input{
+  margin-left: 600px;
+  width: 300px;
+  height: 40px;
+
+  border: 1px solid rgb(225, 224, 224);
+  border-radius: 5px;
+}
+button{
+  width: 70px;
+  height: 40px;
+}
+.container{
+  padding-top: 90px;
+}
+
+button[data-stop]{
+  color: #fafafa;
+  background-color: rgb(154, 49, 252);
+  border: none;
+  border-radius: 5px;
+
+  cursor: pointer;
+}
+button[data-stop]:hover{
+  background-color: rgb(143, 45, 235);
+}
+
+button[data-start]{
+  background-color: #bbb9b9;
+  border: none;
+  border-radius: 5px;
+
+  
+}
+
+/* button[data-start]:hover{
+  background-color: rgb(2, 100, 107);
+} */
+
+button[data-start].start-is-active{
+  background-color: rgb(4, 120, 128);
+  color: #fafafa;
+
+  cursor: pointer;
+}
