--- a/src/css/common.css
+++ b/src/css/common.css
@@ -35,8 +35,11 @@ img {
 .value{
   font-size: 50px;
 }
+.input-container{
+  display: flex;
+  justify-content: center;
+}
 input{
-  margin-left: 600px;
   width: 300px;
   height: 40px;
 
@@ -46,6 +49,9 @@ input{
 button{
   width: 70px;
   height: 40px;
+
+  margin-left: 5px;
+  padding: 0;
 }
 .container{
   padding-top: 90px;
